# trade-app

./: package.json  pnpm-lock.yaml  vite.config.ts
.claude/plan/: phase5.md  phase6.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_add_templates.sql  003_add_signals.sql  004_add_users.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: account.rs  ai.rs  auth.rs  backup.rs  dashboard.rs  data_io.rs  market_data.rs  mod.rs  search.rs  signal.rs  trade_log.rs  trade_plan.rs  trade_summary.rs  trade_template.rs
src-tauri/src/db/: account_repo.rs  mod.rs  trade_log_repo.rs  trade_plan_repo.rs  trade_summary_repo.rs  trade_template_repo.rs  user_repo.rs
src-tauri/src/models/: account.rs  backup.rs  market_data.rs  mod.rs  signal_alert.rs  trade_log.rs  trade_plan.rs  trade_summary.rs  trade_template.rs  user.rs
src-tauri/src/services/: account_service.rs  ai_service.rs  auth_service.rs  auto_backup_service.rs  calculation_service.rs  chanlun_service.rs  dashboard_service.rs  export_service.rs  import_service.rs  market_data_service.rs  mod.rs  search_service.rs  trade_log_service.rs  trade_plan_service.rs  trade_summary_service.rs  trade_template_service.rs
src/composables/: useAi.ts
src/lib/: tauri.ts
src/router/: index.ts
src/stores/: account.ts  app.ts  auth.ts  dashboard.ts  market.ts  trade-log.ts  trade-plan.ts  trade-summary.ts  trade-template.ts
src/types/: common.ts
trade-app.icon/: icon.json
(+51 files in other folders)
